--- a/src/components/icons/Javascript.astro
+++ b/src/components/icons/Javascript.astro
@@ -1,4 +1,4 @@
-<svg xmlns="http://www.w3.org/2000/svg"
+<svg {...Astro.props} xmlns="http://www.w3.org/2000/svg"
 aria-label="JavaScript" role="img"
 viewBox="0 0 512 512"><rect
 width="512" height="512"
