--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,155 +3,34 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import IconSkill from '../components/IconSkill.astro';
 import ProjectCard from '../components/ProjectCard.astro';
+import SectionContainer from '../components/SectionContainer.astro';
+import AboutMe from '../components/sections/AboutMe.astro';
+import Experience from '../components/sections/Experience.astro';
+import SkillsSection from '../components/sections/Skills.astro';
+import Courses from '../components/sections/Courses.astro';
+import Project from '../components/Project.astro';
 ---
 
-<Layout title="Welcome to Astro.">
-	<section id="AboutMe">
-
-	</section>
-	<section id="Experience" class="mx-auto w-3/4">
-		<h2 class="text-white">
-			My Experience
-		</h2>
-		<ol class=" relative border-s border-gray-200 dark:border-gray-700 my-10">                  
-			<li class="mb-10 ms-6">            
-				<span class="absolute flex items-center justify-center w-6 h-6 bg-blue-100 rounded-full -start-3 ring-8 ring-white dark:ring-gray-900 dark:bg-blue-900">
-					<svg class="w-2.5 h-2.5 text-blue-800 dark:text-blue-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-						<path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
-					</svg>
-				</span>
-				<h3 class="flex items-center mb-1 text-lg font-semibold text-gray-900 dark:text-white">Flowbite Application UI v2.0.0 <span class="bg-blue-100 text-blue-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300 ms-3">Latest</span></h3>
-				<time class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Released on January 13th, 2022</time>
-				<p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">Get access to over 20+ pages including a dashboard layout, charts, kanban board, calendar, and pre-order E-commerce & Marketing pages.</p>
-				
-			</li>
-			<li class="mb-10 ms-6">
-				<span class="absolute flex items-center justify-center w-6 h-6 bg-blue-100 rounded-full -start-3 ring-8 ring-white dark:ring-gray-900 dark:bg-blue-900">
-					<svg class="w-2.5 h-2.5 text-blue-800 dark:text-blue-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-						<path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
-					</svg>
-				</span>
-				<h3 class="mb-1 text-lg font-semibold text-gray-900 dark:text-white">Flowbite Figma v1.3.0</h3>
-				<time class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Released on December 7th, 2021</time>
-				<p class="text-base font-normal text-gray-500 dark:text-gray-400">All of the pages and components are first designed in Figma and we keep a parity between the two versions even as we update the project.</p>
-			</li>
-			<li class="ms-6">
-				<span class="absolute flex items-center justify-center w-6 h-6 bg-blue-100 rounded-full -start-3 ring-8 ring-white dark:ring-gray-900 dark:bg-blue-900">
-					<svg class="w-2.5 h-2.5 text-blue-800 dark:text-blue-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-						<path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
-					</svg>
-				</span>
-				<h3 class="mb-1 text-lg font-semibold text-gray-900 dark:text-white">Flowbite Library v1.2.2</h3>
-				<time class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Released on December 2nd, 2021</time>
-				<p class="text-base font-normal text-gray-500 dark:text-gray-400">Get started with dozens of web components and interactive elements built on top of Tailwind CSS.</p>
-			</li>
-		</ol>
+<Layout title="David Yánez L.">
+    <main class="px-4">
+        <SectionContainer id="about-me" data-section="about-me" class="py-16 md:py-36">
+            <AboutMe/>
+        </SectionContainer>
+        <div class="space-y-24"></div>
+            <SectionContainer id="experience" data-section="experience">
+                <Experience/>
+            </SectionContainer>
+            <SectionContainer id="skills" data-section="skills">
+                <SkillsSection/>
+            </SectionContainer>
+            <SectionContainer id="courses" data-id="courses">
+                <Courses/>
+            </SectionContainer>
+            <SectionContainer id="projects" data-id="projects">
+                <Project/>
+            </SectionContainer>
+        </div>
+    </main>
 
 
-	</section>
-	<section class="text-white" id="Skills">
-		
-
-		<div class="relative overflow-x-auto shadow-md sm:rounded-lg mb-20">
-			<table class="w-3/4 mx-auto text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-				<thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-					<tr>
-						<th scope="col" class="px-6 py-3">
-							Type
-						</th>
-						<th scope="col" class="px-6 py-3 text-center">
-							Tools
-						</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-						<th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-							Languages
-						</th>
-						<td class="px-6 py-4 flex gap-6 justify-start">
-							<IconSkill src='assets/icons/python.svg' title='Python' description='Python' width='40px' height='40px' />
-							<IconSkill src='assets/icons/javascript.svg' title='Javascript' description='Javascript' width='40px' height='40px' />
-							<IconSkill src='assets/icons/typescript.svg' title='Typescript' description='Typescript' width='40px' height='40px' />
-							<IconSkill src='assets/icons/dart.svg' title='Dart' description='Dart' width='40px' height='40px' />
-							<IconSkill src='assets/icons/java.svg' title='Java' description='Java' width='40px' height='40px' />
-				
-						</td>
-					</tr>
-					<tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-						<th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-							Front-End
-						</th>
-						<td class="px-6 py-4 flex gap-6 justify-start">
-							<IconSkill src='assets/icons/angular.svg' title='Angular' description='Angular' width='40px' height='40px' />
-							<IconSkill src='assets/icons/react.svg' title='React' description='React' width='40px' height='40px' />
-							
-						</td>
-					</tr>
-					<tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-						<th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-							Back-End
-						</th>
-						<td class="px-6 py-4">
-							XDDDD
-						</td>
-					</tr>
-					<tr class="bg-white border-b dark:bg-gray-800">
-						<th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-							Database
-						</th>
-						<td class="px-6 py-4">
-							XDD
-						</td>
-					</tr>
-					<tr class="bg-white dark:bg-gray-800">
-						<th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-							Deployment
-						</th>
-						<td class="px-6 py-4">
-							XDDD
-						</td>
-					</tr>
-					
-				</tbody>
-			</table>
-		</div>
-
-	</section>
-	<section id="Courses">
-		Courses
-	</section>
-	<section id="Projects">
-		<h1>Projects</h1>
-		<ul class="grid md:grid-cols-2 xs:grid-cols-1 gap-4 w-3/4 mx-auto">
-			<ProjectCard img="assets/captures/capture_pdf.webp" title='My PDF Toolkit' href='href' description='Application for PDF manipulation'>
-				<ul class="flex flex-row justify-start gap-2">
-					<a href="https://github.com/francisdayl/my_pdf_toolkit">
-						<img src="assets/icons/github.svg" alt="github" width="25" height="25">
-					</a>
-					<img src="assets/icons/python.svg" alt="python" width="25" height="25">
-					</a>
-				</ul>
-			</ProjectCard>
-			<ProjectCard img="assets/captures/capture_genhora.webp" title='GenHora' href='href' description='Schedule generator for college'>
-				<a href="">xd1</a>
-				<a href="">xd2</a>
-			</ProjectCard>
-			<ProjectCard img="assets/captures/capture_pdf.webp" title='Project1' href='href' description='XD'>
-				<a href="">xd1</a>
-				<a href="">xd2</a>
-			</ProjectCard>
-			<ProjectCard img="assets/captures/capture_pdf.webp" title='Project2' href='href' description='XD'>
-				<a href="">xd1</a>
-				<a href="">xd2</a>
-			</ProjectCard>
-		</ul>
-	</section>
-	
 </Layout>
-
-<style>
-	section{
-		color:white
-	}
-</style>
