--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -1,5 +1,5 @@
-<div>
-    <h2 >My Experience</h2>
+<div class="">
+    <h2 class="text-3xl font-semibold">Experiencia Laboral</h2>
     <ol class="relative border-s border-gray-200 dark:border-gray-700 my-10">
         <li class="mb-10 ms-6">
             <span
@@ -17,12 +17,11 @@
                     ></path>
                 </svg>
             </span>
-            <h3
-                class="flex items-center mb-1 text-lg font-semibold "
-            >
+            <h3 class="flex items-center mb-1 text-lg font-semibold">
                 Flowbite Application UI v2.0.0 <span
                     class="bg-blue-100 text-blue-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300 ms-3"
-                    >Latest</span>
+                    >Current</span
+                >
             </h3>
             <time
                 class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
@@ -52,11 +51,7 @@
                     ></path>
                 </svg>
             </span>
-            <h3
-                class="mb-1 text-lg font-semibold"
-            >
-                Flowbite Figma v1.3.0
-            </h3>
+            <h3 class="mb-1 text-lg font-semibold">Flowbite Figma v1.3.0</h3>
             <time
                 class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
                 >Released on December 7th, 2021</time
@@ -83,11 +78,7 @@
                     ></path>
                 </svg>
             </span>
-            <h3
-                class="mb-1 text-lg font-semibold"
-            >
-                Flowbite Library v1.2.2
-            </h3>
+            <h3 class="mb-1 text-lg font-semibold">Flowbite Library v1.2.2</h3>
             <time
                 class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
                 >Released on December 2nd, 2021</time
