--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -1,92 +1,62 @@
+---
+import ExperienceItem from "../ExperienceItem.astro";
+
+interface ExperienceActivity{
+    description: string;
+    technologies?: string[];
+}
+
+interface ExperienceDetail {
+    company: string;
+    role: string;
+    date: string;
+    isCurrent: boolean;
+    activities: ExperienceActivity[];
+
+}
+
+const experiences: ExperienceDetail[] = [
+    {date:"Junio 2023", role:"Software Engineer", company:"CandoCorp", isCurrent:true, 
+        activities:[
+            {description:"Actualización y creación de funcionalidades, vistas, pruebas, plantillas, modelos y panel administrativo en plataforma para una start-up americana de registro de propiedad intelectual",
+                technologies:["Django","PostgreSQL","JavaScript","Docker","JQuery"]},
+            {description:"Desarrollo back-end y front-end para plataforma de gestión de almacenes.",
+                technologies:["React","FastAPI","PostgreSQL","AzureDevOps"]},
+            {description:"Capacitación y mentoría de nuevos desarrolladores.",},],
+    },
+    {date:"Julio 2022 - Enero 2023", role:"Full Stack Developer", company:"BlackBox", isCurrent:false, 
+        activities:[
+            {description:"Desarrollo de interfaz y funcionalidades de módulo de facturación para plataforma de courier. ",
+                technologies:["Angular", "Express", "NodeJS", "Typescript"]},
+            {description:"Despliegue en producción.",
+                technologies:["Jenkins","AWS"]},],
+    },
+    {date:"Enero 2022 - Junio 2022", role:"Full Stack Developer (Pasante)", company:"BlackBox", isCurrent:false, 
+        activities:[
+            {description:"Mantenimiento de plataforma de gestión de turnos.",
+                technologies:["Angular","Typescript", "Java", "PostgreSQL"]},
+            {description:"Extraction, Transformation, Load (ETL).",
+                technologies:["Python", "Selenium", "PostgreSQL"]},
+            {description:"Chatbot de Whatsapp y generación de reportes.",
+                technologies:["NodeJS", "Excel"]},
+        ],
+    },
+];
+
+---
+
 <div class="">
     <h2 class="text-3xl font-semibold">Experiencia Laboral</h2>
     <ol class="relative border-s border-gray-200 dark:border-gray-700 my-10">
-        <li class="mb-10 ms-6">
-            <span
-                class="absolute flex items-center justify-center w-6 h-6 bg-blue-100 rounded-full -start-3 ring-8 ring-white dark:ring-gray-900 dark:bg-blue-900"
-            >
-                <svg
-                    class="w-2.5 h-2.5 text-blue-800 dark:text-blue-300"
-                    aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="currentColor"
-                    viewBox="0 0 20 20"
-                >
-                    <path
-                        d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"
-                    ></path>
-                </svg>
-            </span>
-            <h3 class="flex items-center mb-1 text-lg font-semibold">
-                Flowbite Application UI v2.0.0 <span
-                    class="bg-blue-100 text-blue-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300 ms-3"
-                    >Current</span
-                >
-            </h3>
-            <time
-                class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
-                >Released on January 13th, 2022</time
-            >
-            <p
-                class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400"
-            >
-                Get access to over 20+ pages including a dashboard layout,
-                charts, kanban board, calendar, and pre-order E-commerce &
-                Marketing pages.
-            </p>
-        </li>
-        <li class="mb-10 ms-6">
-            <span
-                class="absolute flex items-center justify-center w-6 h-6 bg-blue-100 rounded-full -start-3 ring-8 ring-white dark:ring-gray-900 dark:bg-blue-900"
-            >
-                <svg
-                    class="w-2.5 h-2.5 text-blue-800 dark:text-blue-300"
-                    aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="currentColor"
-                    viewBox="0 0 20 20"
-                >
-                    <path
-                        d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"
-                    ></path>
-                </svg>
-            </span>
-            <h3 class="mb-1 text-lg font-semibold">Flowbite Figma v1.3.0</h3>
-            <time
-                class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
-                >Released on December 7th, 2021</time
-            >
-            <p class="text-base font-normal text-gray-500 dark:text-gray-400">
-                All of the pages and components are first designed in Figma and
-                we keep a parity between the two versions even as we update the
-                project.
-            </p>
-        </li>
-        <li class="ms-6">
-            <span
-                class="absolute flex items-center justify-center w-6 h-6 bg-blue-100 rounded-full -start-3 ring-8 ring-white dark:ring-gray-900 dark:bg-blue-900"
-            >
-                <svg
-                    class="w-2.5 h-2.5 text-blue-800 dark:text-blue-300"
-                    aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="currentColor"
-                    viewBox="0 0 20 20"
-                >
-                    <path
-                        d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"
-                    ></path>
-                </svg>
-            </span>
-            <h3 class="mb-1 text-lg font-semibold">Flowbite Library v1.2.2</h3>
-            <time
-                class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
-                >Released on December 2nd, 2021</time
-            >
-            <p class="text-base font-normal text-gray-500 dark:text-gray-400">
-                Get started with dozens of web components and interactive
-                elements built on top of Tailwind CSS.
-            </p>
-        </li>
+        {
+            experiences.map((experience)=> 
+                <ExperienceItem date={experience.date} role={experience.role} 
+                company={experience.company} isCurrent={experience.isCurrent}
+                activities={experience.activities}
+                />
+            )
+        }
+        
+        
     </ol>
 </div>
