--- a/src/components/sections/Courses.astro
+++ b/src/components/sections/Courses.astro
@@ -1,3 +1,17 @@
-<section id="courses">
-    Courses
-</section>
+<h2 class="text-3xl font-semibold mt-8">Cursos y Certificados</h2>
+
+<ul class="mt-10 flex flex-row justify-center">
+    <li class="flex flex-col">
+        <a href="https://www.credly.com/badges/222987f0-e207-4534-a021-c4370165bac9" target="_blank" rel="noopener noreferrer">
+            <img src="assets/icons/cloud_practitioner_badge.webp" width="180px" height="180px" alt="AWS Cloud Practitioner">
+        </a>
+        <span class="text-center">Certified</span>
+    </li>
+    <li class="flex flex-col">
+        <a href="" target="" rel="noopener noreferrer">
+            <img class="grayscale brightness-150" src="assets/icons/developer_badge.webp" width="180px" height="180px" alt="AWS Developer Associate">
+        </a>
+        <span class="text-center">On Course</span>
+    </li>
+
+</ul>
