--- a/src/components/sections/AboutMe.astro
+++ b/src/components/sections/AboutMe.astro
@@ -11,7 +11,7 @@ import SocialIcon from "../SocialIcon.astro"
   <div class="order-0 self-center w-100 md:w-1/2">
     <h2 class="text-bold text-3xl">Hola Soy David</h2>
     <p class="text-pretty">
-      Ingeniero en computación con más de 3 años de experiencia, especializado en Python y Django. He trabajado en proyectos web, móviles, bases de datos, inteligencia artificial y automatización, aplicando diferentes tecnologías según cada necesidad.
+      Ingeniero en computación con más de 3 años de experiencia, especializado en Python y Django. He colaborado y liderado proyectos web, móviles, bases de datos, inteligencia artificial y automatización, aplicando diferentes tecnologías según cada necesidad.
     </p>
     <div
       class="relative flex flex-col gap-5 overflow-hidden w-full mt-6 md:mt-14 mb-5 md:mb-0">
