--- a/src/components/sections/Courses.astro
+++ b/src/components/sections/Courses.astro
@@ -5,13 +5,13 @@
         <a href="https://www.credly.com/badges/222987f0-e207-4534-a021-c4370165bac9" target="_blank" rel="noopener noreferrer">
             <img src="assets/icons/cloud_practitioner_badge.webp" width="180px" height="180px" alt="AWS Cloud Practitioner">
         </a>
-        <span class="text-center">Certified</span>
+        <span class="text-center">Certificado</span>
     </li>
     <li class="flex flex-col">
-        <a href="" target="" rel="noopener noreferrer">
+        <a href="#courses" target="" rel="noopener noreferrer">
             <img class="grayscale brightness-150" src="assets/icons/developer_badge.webp" width="180px" height="180px" alt="AWS Developer Associate">
         </a>
-        <span class="text-center">On Course</span>
+        <span class="text-center">En Curso</span>
     </li>
 
 </ul>
