--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Project from '../components/Project.astro';
 ---
 
 <Layout title="David Yánez L.">
-    <main class="px-4">
+    <main class="overflow-x-hidden">
         <SectionContainer id="about-me" data-section="about-me" class="py-16 md:py-36">
             <AboutMe/>
         </SectionContainer>
