--- a/src/components/IconSkill.astro
+++ b/src/components/IconSkill.astro
@@ -2,26 +2,18 @@
 interface Props {
 	title: string;
 	description: string;
-	src: string;
-    width: string;
-    height: string;
 }
 
-const { src, title, description, width, height } = Astro.props;
+const {title, description} = Astro.props;
 ---
 
-
-
-
 <div class="flex flex-col items-center mt-auto gap-1">
-    <img class="object-cover hover:animate-scale " data-tooltip-target=`tooltip-light-${title}` data-tooltip-style="light"
-    src={src} alt={title} width={width} height={height} loading="lazy">
-    <span class="text-xs">{description}</span>
-
+    <slot />
+    <span class="text-xs">{title}</span>
 </div>
  
 <div id=`tooltip-light-${title}` role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 tooltip">
-    Tooltip content
+    {description}
     <div class="tooltip-arrow" data-popper-arrow></div>
 </div>
 
