create certification component

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -24,6 +24,6 @@ const { img, repository,website, title, description } = Astro.props;
             <Repository class="ml-2 size-6 hover:animate-scale" size="6" href={repository}/>)
         }
     </div>
-    <p class="">{description}</p>
+    <p>{description}</p>
     <slot/>
 </li>
