Add seo tags and icon

--- a/src/components/Certification.astro
+++ b/src/components/Certification.astro
@@ -6,5 +6,5 @@ const {href,image,completed=false,classnames, name} = Astro.props;
     <a href={href} target={completed ? "_blank": "_self"} rel="noopener noreferrer">
         <img src={image} class={classnames} alt={name}>
     </a>
-    <span class="text-center font-semibold">{completed? 'Certificado':'Completado'}</span>
+    <span class="text-center font-semibold">{completed? 'Certificado':'En Curso'}</span>
 </li>
