--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,16 +7,28 @@ interface Props {
 }
 
 const { title } = Astro.props;
+const description = "David Yanez Lopez, Desarrollador full stack con más de 3 años de experiencia creando soluciones informáticas de diferente naturaleza" ;
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/icon.svg" />
 		<meta name="generator" content={Astro.generator} />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+
+    <meta property="og:image" content="https://github.com/francisdayl/portfolio/blob/main/public/assets/captures/catpure_portfolio.webp" />
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content={description} />
+    <meta property="og:url" content={Astro.url} />
+    <meta property="og:site_name" content="francisdayl.dev" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_ES" />
+
 		<title>{title}</title>
 		<ViewTransitions />
 	</head>
